name:                medium-sdk-haskell
version:             0.1.0.0
synopsis:            Haskell SDK for communicating with the Medium API
description:         Haskell SDK for communicating with the Medium API
license:             GPL-3
license-file:        LICENSE
author:              timmy_tofu
maintainer:          timmytofu@users.noreply.github.com
copyright:           ©2015 Timmy Tofu
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     MediumAPI
  build-depends:       base
                     , aeson
                     , bytestring
                     , data-default-class
                     , either
                     , http-client
                     , http-api-data
                     , servant-client
                     , servant-server
                     , text
                     , time

source-repository head
  type:     git
  location: https://github.com/timmytofu/medium-sdk-haskell
